[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = "FastAPI project with healthcheck endpoint"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
moto = "^4.2.5"
boto3 = "^1.28.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 